--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 body {
     font-family: "Times New Roman", Times, serif;
     background-color: #fefefe;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60ch
 }
-
+p {
+	padding-left: 4ch;
+}
 h1 {
     text-align: center;
 }
+h2 {
+	padding-top: 1em;
+}  
