--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: #fefefe;
     margin-left: auto;
     margin-right: auto;
-    width: 60ch
+    width: 60ch;
 }
 p {
 	padding-left: 4ch;
