--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
     font-family: "Times New Roman", Times, serif;
     background-color: #fefefe;
+    color: #454545;
     margin-left: auto;
     margin-right: auto;
-    width: 60ch;
+    width: 80ch;
 }
 p {
 	padding-left: 4ch;
